// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field for array setting should render custom setting icon if it is custom 1`] = `
<EuiFlexGroup
  alignItems="stretch"
  component="div"
  gutterSize="l"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={false}
    style={
      Object {
        "minWidth": 400,
      }
    }
  >
    <EuiFormRow
      error={null}
      fullWidth={false}
      hasEmptyLabelSpace={false}
      helpText={
        <div>
          <div>
            <span
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Description for Array test setting",
                }
              }
            />
          </div>
        </div>
      }
      isInvalid={false}
      label={
        <EuiFlexGroup
          alignItems="stretch"
          component="div"
          gutterSize="s"
          justifyContent="spaceBetween"
          responsive={true}
          wrap={false}
        >
          <EuiFlexItem
            className="advancedSettings__field__name"
            component="div"
            grow={true}
          >
            Array test setting
          </EuiFlexItem>
          <EuiFlexItem
            className="advancedSettings__field__key"
            component="div"
            grow={false}
          >
            <EuiFlexGroup
              alignItems="center"
              component="div"
              gutterSize="xs"
              justifyContent="flexStart"
              responsive={true}
              wrap={false}
            >
              <EuiFlexItem
                className="advancedSettings__field__key__wrapper"
                component="div"
                grow={true}
              >
                <EuiTextColor
                  aria-label="array test setting"
                  className="advancedSettings__field__key__text"
                  color="subdued"
                >
                  array:test:setting
                </EuiTextColor>
              </EuiFlexItem>
              <EuiFlexItem
                component="div"
                grow={false}
              >
                <EuiIconTip
                  aria-label="Custom setting"
                  color="primary"
                  content="Custom setting"
                  type="asterisk"
                />
              </EuiFlexItem>
            </EuiFlexGroup>
          </EuiFlexItem>
        </EuiFlexGroup>
      }
    >
      <EuiFieldText
        data-test-subj="advancedSetting-editField-array:test:setting"
        disabled={false}
        fullWidth={false}
        isLoading={false}
        onChange={[Function]}
        onKeyDown={[Function]}
        value="default_value"
      />
    </EuiFormRow>
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`Field for array setting should render default value if there is no user value set 1`] = `
<EuiFlexGroup
  alignItems="stretch"
  component="div"
  gutterSize="l"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={false}
    style={
      Object {
        "minWidth": 400,
      }
    }
  >
    <EuiFormRow
      error={null}
      fullWidth={false}
      hasEmptyLabelSpace={false}
      helpText={
        <div>
          <div>
            <span
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Description for Array test setting",
                }
              }
            />
          </div>
        </div>
      }
      isInvalid={false}
      label={
        <EuiFlexGroup
          alignItems="stretch"
          component="div"
          gutterSize="s"
          justifyContent="spaceBetween"
          responsive={true}
          wrap={false}
        >
          <EuiFlexItem
            className="advancedSettings__field__name"
            component="div"
            grow={true}
          >
            Array test setting
          </EuiFlexItem>
          <EuiFlexItem
            className="advancedSettings__field__key"
            component="div"
            grow={false}
          >
            <EuiFlexGroup
              alignItems="center"
              component="div"
              gutterSize="xs"
              justifyContent="flexStart"
              responsive={true}
              wrap={false}
            >
              <EuiFlexItem
                className="advancedSettings__field__key__wrapper"
                component="div"
                grow={true}
              >
                <EuiTextColor
                  aria-label="array test setting"
                  className="advancedSettings__field__key__text"
                  color="subdued"
                >
                  array:test:setting
                </EuiTextColor>
              </EuiFlexItem>
              
            </EuiFlexGroup>
          </EuiFlexItem>
        </EuiFlexGroup>
      }
    >
      <EuiFieldText
        data-test-subj="advancedSetting-editField-array:test:setting"
        disabled={false}
        fullWidth={false}
        isLoading={false}
        onChange={[Function]}
        onKeyDown={[Function]}
        value="default_value"
      />
    </EuiFormRow>
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`Field for array setting should render user value if there is user value is set 1`] = `
<EuiFlexGroup
  alignItems="stretch"
  component="div"
  gutterSize="l"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={false}
    style={
      Object {
        "minWidth": 400,
      }
    }
  >
    <EuiFormRow
      error={null}
      fullWidth={false}
      hasEmptyLabelSpace={false}
      helpText={
        <div>
          <div>
            <span
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Description for Array test setting",
                }
              }
            />
          </div>
          <span>
            Default: 
            <em>
              default_value
            </em>
              
            <EuiLink
              aria-label="Reset array test setting"
              color="primary"
              data-test-subj="advancedSetting-resetField-array:test:setting"
              onClick={[Function]}
              type="button"
            >
              Reset
            </EuiLink>
              
          </span>
        </div>
      }
      isInvalid={false}
      label={
        <EuiFlexGroup
          alignItems="stretch"
          component="div"
          gutterSize="s"
          justifyContent="spaceBetween"
          responsive={true}
          wrap={false}
        >
          <EuiFlexItem
            className="advancedSettings__field__name"
            component="div"
            grow={true}
          >
            Array test setting
          </EuiFlexItem>
          <EuiFlexItem
            className="advancedSettings__field__key"
            component="div"
            grow={false}
          >
            <EuiFlexGroup
              alignItems="center"
              component="div"
              gutterSize="xs"
              justifyContent="flexStart"
              responsive={true}
              wrap={false}
            >
              <EuiFlexItem
                className="advancedSettings__field__key__wrapper"
                component="div"
                grow={true}
              >
                <EuiTextColor
                  aria-label="array test setting"
                  className="advancedSettings__field__key__text"
                  color="subdued"
                >
                  array:test:setting
                </EuiTextColor>
              </EuiFlexItem>
              
            </EuiFlexGroup>
          </EuiFlexItem>
        </EuiFlexGroup>
      }
    >
      <EuiFieldText
        data-test-subj="advancedSetting-editField-array:test:setting"
        disabled={false}
        fullWidth={false}
        isLoading={false}
        onChange={[Function]}
        onKeyDown={[Function]}
        value="user, value"
      />
    </EuiFormRow>
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`Field for boolean setting should render custom setting icon if it is custom 1`] = `
<EuiFlexGroup
  alignItems="stretch"
  component="div"
  gutterSize="l"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={false}
    style={
      Object {
        "minWidth": 400,
      }
    }
  >
    <EuiFormRow
      error={null}
      fullWidth={false}
      hasEmptyLabelSpace={false}
      helpText={
        <div>
          <div>
            <span
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Description for Boolean test setting",
                }
              }
            />
          </div>
        </div>
      }
      isInvalid={false}
      label={
        <EuiFlexGroup
          alignItems="stretch"
          component="div"
          gutterSize="s"
          justifyContent="spaceBetween"
          responsive={true}
          wrap={false}
        >
          <EuiFlexItem
            className="advancedSettings__field__name"
            component="div"
            grow={true}
          >
            Boolean test setting
          </EuiFlexItem>
          <EuiFlexItem
            className="advancedSettings__field__key"
            component="div"
            grow={false}
          >
            <EuiFlexGroup
              alignItems="center"
              component="div"
              gutterSize="xs"
              justifyContent="flexStart"
              responsive={true}
              wrap={false}
            >
              <EuiFlexItem
                className="advancedSettings__field__key__wrapper"
                component="div"
                grow={true}
              >
                <EuiTextColor
                  aria-label="boolean test setting"
                  className="advancedSettings__field__key__text"
                  color="subdued"
                >
                  boolean:test:setting
                </EuiTextColor>
              </EuiFlexItem>
              <EuiFlexItem
                component="div"
                grow={false}
              >
                <EuiIconTip
                  aria-label="Custom setting"
                  color="primary"
                  content="Custom setting"
                  type="asterisk"
                />
              </EuiFlexItem>
            </EuiFlexGroup>
          </EuiFlexItem>
        </EuiFlexGroup>
      }
    >
      <EuiSwitch
        checked={true}
        data-test-subj="advancedSetting-editField-boolean:test:setting"
        disabled={false}
        onChange={[Function]}
        onKeyDown={[Function]}
      />
    </EuiFormRow>
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`Field for boolean setting should render default value if there is no user value set 1`] = `
<EuiFlexGroup
  alignItems="stretch"
  component="div"
  gutterSize="l"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={false}
    style={
      Object {
        "minWidth": 400,
      }
    }
  >
    <EuiFormRow
      error={null}
      fullWidth={false}
      hasEmptyLabelSpace={false}
      helpText={
        <div>
          <div>
            <span
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Description for Boolean test setting",
                }
              }
            />
          </div>
        </div>
      }
      isInvalid={false}
      label={
        <EuiFlexGroup
          alignItems="stretch"
          component="div"
          gutterSize="s"
          justifyContent="spaceBetween"
          responsive={true}
          wrap={false}
        >
          <EuiFlexItem
            className="advancedSettings__field__name"
            component="div"
            grow={true}
          >
            Boolean test setting
          </EuiFlexItem>
          <EuiFlexItem
            className="advancedSettings__field__key"
            component="div"
            grow={false}
          >
            <EuiFlexGroup
              alignItems="center"
              component="div"
              gutterSize="xs"
              justifyContent="flexStart"
              responsive={true}
              wrap={false}
            >
              <EuiFlexItem
                className="advancedSettings__field__key__wrapper"
                component="div"
                grow={true}
              >
                <EuiTextColor
                  aria-label="boolean test setting"
                  className="advancedSettings__field__key__text"
                  color="subdued"
                >
                  boolean:test:setting
                </EuiTextColor>
              </EuiFlexItem>
              
            </EuiFlexGroup>
          </EuiFlexItem>
        </EuiFlexGroup>
      }
    >
      <EuiSwitch
        checked={true}
        data-test-subj="advancedSetting-editField-boolean:test:setting"
        disabled={false}
        onChange={[Function]}
        onKeyDown={[Function]}
      />
    </EuiFormRow>
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`Field for boolean setting should render user value if there is user value is set 1`] = `
<EuiFlexGroup
  alignItems="stretch"
  component="div"
  gutterSize="l"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={false}
    style={
      Object {
        "minWidth": 400,
      }
    }
  >
    <EuiFormRow
      error={null}
      fullWidth={false}
      hasEmptyLabelSpace={false}
      helpText={
        <div>
          <div>
            <span
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Description for Boolean test setting",
                }
              }
            />
          </div>
          <span>
            Default: 
            <em>
              true
            </em>
              
            <EuiLink
              aria-label="Reset boolean test setting"
              color="primary"
              data-test-subj="advancedSetting-resetField-boolean:test:setting"
              onClick={[Function]}
              type="button"
            >
              Reset
            </EuiLink>
              
          </span>
        </div>
      }
      isInvalid={false}
      label={
        <EuiFlexGroup
          alignItems="stretch"
          component="div"
          gutterSize="s"
          justifyContent="spaceBetween"
          responsive={true}
          wrap={false}
        >
          <EuiFlexItem
            className="advancedSettings__field__name"
            component="div"
            grow={true}
          >
            Boolean test setting
          </EuiFlexItem>
          <EuiFlexItem
            className="advancedSettings__field__key"
            component="div"
            grow={false}
          >
            <EuiFlexGroup
              alignItems="center"
              component="div"
              gutterSize="xs"
              justifyContent="flexStart"
              responsive={true}
              wrap={false}
            >
              <EuiFlexItem
                className="advancedSettings__field__key__wrapper"
                component="div"
                grow={true}
              >
                <EuiTextColor
                  aria-label="boolean test setting"
                  className="advancedSettings__field__key__text"
                  color="subdued"
                >
                  boolean:test:setting
                </EuiTextColor>
              </EuiFlexItem>
              
            </EuiFlexGroup>
          </EuiFlexItem>
        </EuiFlexGroup>
      }
    >
      <EuiSwitch
        checked={false}
        data-test-subj="advancedSetting-editField-boolean:test:setting"
        disabled={false}
        onChange={[Function]}
        onKeyDown={[Function]}
      />
    </EuiFormRow>
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`Field for image setting should render custom setting icon if it is custom 1`] = `
<EuiFlexGroup
  alignItems="stretch"
  component="div"
  gutterSize="l"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={false}
    style={
      Object {
        "minWidth": 400,
      }
    }
  >
    <EuiFormRow
      error={null}
      fullWidth={false}
      hasEmptyLabelSpace={false}
      helpText={
        <div>
          <div>
            <span
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Description for Image test setting",
                }
              }
            />
          </div>
        </div>
      }
      isInvalid={false}
      label={
        <EuiFlexGroup
          alignItems="stretch"
          component="div"
          gutterSize="s"
          justifyContent="spaceBetween"
          responsive={true}
          wrap={false}
        >
          <EuiFlexItem
            className="advancedSettings__field__name"
            component="div"
            grow={true}
          >
            Image test setting
          </EuiFlexItem>
          <EuiFlexItem
            className="advancedSettings__field__key"
            component="div"
            grow={false}
          >
            <EuiFlexGroup
              alignItems="center"
              component="div"
              gutterSize="xs"
              justifyContent="flexStart"
              responsive={true}
              wrap={false}
            >
              <EuiFlexItem
                className="advancedSettings__field__key__wrapper"
                component="div"
                grow={true}
              >
                <EuiTextColor
                  aria-label="image test setting"
                  className="advancedSettings__field__key__text"
                  color="subdued"
                >
                  image:test:setting
                </EuiTextColor>
              </EuiFlexItem>
              <EuiFlexItem
                component="div"
                grow={false}
              >
                <EuiIconTip
                  aria-label="Custom setting"
                  color="primary"
                  content="Custom setting"
                  type="asterisk"
                />
              </EuiFlexItem>
            </EuiFlexGroup>
          </EuiFlexItem>
        </EuiFlexGroup>
      }
    >
      <EuiFilePicker
        accept=".jpg,.jpeg,.png"
        data-test-subj="advancedSetting-editField-image:test:setting"
        disabled={false}
        initialPromptText="Select or drag and drop a file"
        onChange={[Function]}
        onKeyDown={[Function]}
      />
    </EuiFormRow>
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`Field for image setting should render default value if there is no user value set 1`] = `
<EuiFlexGroup
  alignItems="stretch"
  component="div"
  gutterSize="l"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={false}
    style={
      Object {
        "minWidth": 400,
      }
    }
  >
    <EuiFormRow
      error={null}
      fullWidth={false}
      hasEmptyLabelSpace={false}
      helpText={
        <div>
          <div>
            <span
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Description for Image test setting",
                }
              }
            />
          </div>
        </div>
      }
      isInvalid={false}
      label={
        <EuiFlexGroup
          alignItems="stretch"
          component="div"
          gutterSize="s"
          justifyContent="spaceBetween"
          responsive={true}
          wrap={false}
        >
          <EuiFlexItem
            className="advancedSettings__field__name"
            component="div"
            grow={true}
          >
            Image test setting
          </EuiFlexItem>
          <EuiFlexItem
            className="advancedSettings__field__key"
            component="div"
            grow={false}
          >
            <EuiFlexGroup
              alignItems="center"
              component="div"
              gutterSize="xs"
              justifyContent="flexStart"
              responsive={true}
              wrap={false}
            >
              <EuiFlexItem
                className="advancedSettings__field__key__wrapper"
                component="div"
                grow={true}
              >
                <EuiTextColor
                  aria-label="image test setting"
                  className="advancedSettings__field__key__text"
                  color="subdued"
                >
                  image:test:setting
                </EuiTextColor>
              </EuiFlexItem>
              
            </EuiFlexGroup>
          </EuiFlexItem>
        </EuiFlexGroup>
      }
    >
      <EuiFilePicker
        accept=".jpg,.jpeg,.png"
        data-test-subj="advancedSetting-editField-image:test:setting"
        disabled={false}
        initialPromptText="Select or drag and drop a file"
        onChange={[Function]}
        onKeyDown={[Function]}
      />
    </EuiFormRow>
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`Field for image setting should render user value if there is user value is set 1`] = `
<EuiFlexGroup
  alignItems="stretch"
  component="div"
  gutterSize="l"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={false}
    style={
      Object {
        "minWidth": 400,
      }
    }
  >
    <EuiFormRow
      error={null}
      fullWidth={false}
      hasEmptyLabelSpace={false}
      helpText={
        <div>
          <div>
            <span
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Description for Image test setting",
                }
              }
            />
          </div>
          <span>
            Default: 
            <em>
              null
            </em>
              
            <EuiLink
              aria-label="Reset image test setting"
              color="primary"
              data-test-subj="advancedSetting-resetField-image:test:setting"
              onClick={[Function]}
              type="button"
            >
              Reset
            </EuiLink>
              
          </span>
          <span>
            <EuiLink
              aria-label="Change image test setting"
              color="primary"
              data-test-subj="advancedSetting-changeImage-image:test:setting"
              onClick={[Function]}
              type="button"
            >
              Change
            </EuiLink>
          </span>
        </div>
      }
      isInvalid={false}
      label={
        <EuiFlexGroup
          alignItems="stretch"
          component="div"
          gutterSize="s"
          justifyContent="spaceBetween"
          responsive={true}
          wrap={false}
        >
          <EuiFlexItem
            className="advancedSettings__field__name"
            component="div"
            grow={true}
          >
            Image test setting
          </EuiFlexItem>
          <EuiFlexItem
            className="advancedSettings__field__key"
            component="div"
            grow={false}
          >
            <EuiFlexGroup
              alignItems="center"
              component="div"
              gutterSize="xs"
              justifyContent="flexStart"
              responsive={true}
              wrap={false}
            >
              <EuiFlexItem
                className="advancedSettings__field__key__wrapper"
                component="div"
                grow={true}
              >
                <EuiTextColor
                  aria-label="image test setting"
                  className="advancedSettings__field__key__text"
                  color="subdued"
                >
                  image:test:setting
                </EuiTextColor>
              </EuiFlexItem>
              
            </EuiFlexGroup>
          </EuiFlexItem>
        </EuiFlexGroup>
      }
    >
      <EuiImage
        allowFullScreen={true}
        alt="image:test:setting"
        fullScreenIconColor="light"
        size="original"
        url="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="
      />
    </EuiFormRow>
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`Field for json setting should render custom setting icon if it is custom 1`] = `
<EuiFlexGroup
  alignItems="stretch"
  component="div"
  gutterSize="l"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={false}
    style={
      Object {
        "minWidth": 400,
      }
    }
  >
    <EuiFormRow
      error={null}
      fullWidth={false}
      hasEmptyLabelSpace={false}
      helpText={
        <div>
          <div>
            <span
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Description for Json test setting",
                }
              }
            />
          </div>
        </div>
      }
      isInvalid={false}
      label={
        <EuiFlexGroup
          alignItems="stretch"
          component="div"
          gutterSize="s"
          justifyContent="spaceBetween"
          responsive={true}
          wrap={false}
        >
          <EuiFlexItem
            className="advancedSettings__field__name"
            component="div"
            grow={true}
          >
            Json test setting
          </EuiFlexItem>
          <EuiFlexItem
            className="advancedSettings__field__key"
            component="div"
            grow={false}
          >
            <EuiFlexGroup
              alignItems="center"
              component="div"
              gutterSize="xs"
              justifyContent="flexStart"
              responsive={true}
              wrap={false}
            >
              <EuiFlexItem
                className="advancedSettings__field__key__wrapper"
                component="div"
                grow={true}
              >
                <EuiTextColor
                  aria-label="json test setting"
                  className="advancedSettings__field__key__text"
                  color="subdued"
                >
                  json:test:setting
                </EuiTextColor>
              </EuiFlexItem>
              <EuiFlexItem
                component="div"
                grow={false}
              >
                <EuiIconTip
                  aria-label="Custom setting"
                  color="primary"
                  content="Custom setting"
                  type="asterisk"
                />
              </EuiFlexItem>
            </EuiFlexGroup>
          </EuiFlexItem>
        </EuiFlexGroup>
      }
    >
      <EuiTextArea
        data-test-subj="advancedSetting-editField-json:test:setting"
        disabled={false}
        fullWidth={false}
        isInvalid={false}
        onChange={[Function]}
        onKeyDown={[Function]}
        rows={6}
        value="{\\"foo\\": \\"bar\\"}"
      />
    </EuiFormRow>
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`Field for json setting should render default value if there is no user value set 1`] = `
<EuiFlexGroup
  alignItems="stretch"
  component="div"
  gutterSize="l"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={false}
    style={
      Object {
        "minWidth": 400,
      }
    }
  >
    <EuiFormRow
      error={null}
      fullWidth={false}
      hasEmptyLabelSpace={false}
      helpText={
        <div>
          <div>
            <span
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Description for Json test setting",
                }
              }
            />
          </div>
          <span>
            Default: 
            <em>
              null
            </em>
              
            <EuiLink
              aria-label="Reset json test setting"
              color="primary"
              data-test-subj="advancedSetting-resetField-json:test:setting"
              onClick={[Function]}
              type="button"
            >
              Reset
            </EuiLink>
              
          </span>
        </div>
      }
      isInvalid={false}
      label={
        <EuiFlexGroup
          alignItems="stretch"
          component="div"
          gutterSize="s"
          justifyContent="spaceBetween"
          responsive={true}
          wrap={false}
        >
          <EuiFlexItem
            className="advancedSettings__field__name"
            component="div"
            grow={true}
          >
            Json test setting
          </EuiFlexItem>
          <EuiFlexItem
            className="advancedSettings__field__key"
            component="div"
            grow={false}
          >
            <EuiFlexGroup
              alignItems="center"
              component="div"
              gutterSize="xs"
              justifyContent="flexStart"
              responsive={true}
              wrap={false}
            >
              <EuiFlexItem
                className="advancedSettings__field__key__wrapper"
                component="div"
                grow={true}
              >
                <EuiTextColor
                  aria-label="json test setting"
                  className="advancedSettings__field__key__text"
                  color="subdued"
                >
                  json:test:setting
                </EuiTextColor>
              </EuiFlexItem>
              
            </EuiFlexGroup>
          </EuiFlexItem>
        </EuiFlexGroup>
      }
    >
      <EuiTextArea
        data-test-subj="advancedSetting-editField-json:test:setting"
        disabled={false}
        fullWidth={false}
        isInvalid={false}
        onChange={[Function]}
        onKeyDown={[Function]}
        rows={6}
        value="{\\"foo\\": \\"bar\\"}"
      />
    </EuiFormRow>
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`Field for json setting should render user value if there is user value is set 1`] = `
<EuiFlexGroup
  alignItems="stretch"
  component="div"
  gutterSize="l"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={false}
    style={
      Object {
        "minWidth": 400,
      }
    }
  >
    <EuiFormRow
      error={null}
      fullWidth={false}
      hasEmptyLabelSpace={false}
      helpText={
        <div>
          <div>
            <span
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Description for Json test setting",
                }
              }
            />
          </div>
          <span>
            Default: 
            <em>
              null
            </em>
              
            <EuiLink
              aria-label="Reset json test setting"
              color="primary"
              data-test-subj="advancedSetting-resetField-json:test:setting"
              onClick={[Function]}
              type="button"
            >
              Reset
            </EuiLink>
              
          </span>
        </div>
      }
      isInvalid={false}
      label={
        <EuiFlexGroup
          alignItems="stretch"
          component="div"
          gutterSize="s"
          justifyContent="spaceBetween"
          responsive={true}
          wrap={false}
        >
          <EuiFlexItem
            className="advancedSettings__field__name"
            component="div"
            grow={true}
          >
            Json test setting
          </EuiFlexItem>
          <EuiFlexItem
            className="advancedSettings__field__key"
            component="div"
            grow={false}
          >
            <EuiFlexGroup
              alignItems="center"
              component="div"
              gutterSize="xs"
              justifyContent="flexStart"
              responsive={true}
              wrap={false}
            >
              <EuiFlexItem
                className="advancedSettings__field__key__wrapper"
                component="div"
                grow={true}
              >
                <EuiTextColor
                  aria-label="json test setting"
                  className="advancedSettings__field__key__text"
                  color="subdued"
                >
                  json:test:setting
                </EuiTextColor>
              </EuiFlexItem>
              
            </EuiFlexGroup>
          </EuiFlexItem>
        </EuiFlexGroup>
      }
    >
      <EuiTextArea
        data-test-subj="advancedSetting-editField-json:test:setting"
        disabled={false}
        fullWidth={false}
        isInvalid={false}
        onChange={[Function]}
        onKeyDown={[Function]}
        rows={6}
        value="{\\"hello\\": \\"world\\"}"
      />
    </EuiFormRow>
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`Field for markdown setting should render custom setting icon if it is custom 1`] = `
<EuiFlexGroup
  alignItems="stretch"
  component="div"
  gutterSize="l"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={false}
    style={
      Object {
        "minWidth": 400,
      }
    }
  >
    <EuiFormRow
      error={null}
      fullWidth={false}
      hasEmptyLabelSpace={false}
      helpText={
        <div>
          <div>
            <span
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Description for Markdown test setting",
                }
              }
            />
          </div>
        </div>
      }
      isInvalid={false}
      label={
        <EuiFlexGroup
          alignItems="stretch"
          component="div"
          gutterSize="s"
          justifyContent="spaceBetween"
          responsive={true}
          wrap={false}
        >
          <EuiFlexItem
            className="advancedSettings__field__name"
            component="div"
            grow={true}
          >
            Markdown test setting
          </EuiFlexItem>
          <EuiFlexItem
            className="advancedSettings__field__key"
            component="div"
            grow={false}
          >
            <EuiFlexGroup
              alignItems="center"
              component="div"
              gutterSize="xs"
              justifyContent="flexStart"
              responsive={true}
              wrap={false}
            >
              <EuiFlexItem
                className="advancedSettings__field__key__wrapper"
                component="div"
                grow={true}
              >
                <EuiTextColor
                  aria-label="markdown test setting"
                  className="advancedSettings__field__key__text"
                  color="subdued"
                >
                  markdown:test:setting
                </EuiTextColor>
              </EuiFlexItem>
              <EuiFlexItem
                component="div"
                grow={false}
              >
                <EuiIconTip
                  aria-label="Custom setting"
                  color="primary"
                  content="Custom setting"
                  type="asterisk"
                />
              </EuiFlexItem>
            </EuiFlexGroup>
          </EuiFlexItem>
        </EuiFlexGroup>
      }
    >
      <EuiTextArea
        data-test-subj="advancedSetting-editField-markdown:test:setting"
        disabled={false}
        fullWidth={false}
        isInvalid={false}
        onChange={[Function]}
        onKeyDown={[Function]}
        rows={6}
        value=""
      />
    </EuiFormRow>
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`Field for markdown setting should render default value if there is no user value set 1`] = `
<EuiFlexGroup
  alignItems="stretch"
  component="div"
  gutterSize="l"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={false}
    style={
      Object {
        "minWidth": 400,
      }
    }
  >
    <EuiFormRow
      error={null}
      fullWidth={false}
      hasEmptyLabelSpace={false}
      helpText={
        <div>
          <div>
            <span
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Description for Markdown test setting",
                }
              }
            />
          </div>
        </div>
      }
      isInvalid={false}
      label={
        <EuiFlexGroup
          alignItems="stretch"
          component="div"
          gutterSize="s"
          justifyContent="spaceBetween"
          responsive={true}
          wrap={false}
        >
          <EuiFlexItem
            className="advancedSettings__field__name"
            component="div"
            grow={true}
          >
            Markdown test setting
          </EuiFlexItem>
          <EuiFlexItem
            className="advancedSettings__field__key"
            component="div"
            grow={false}
          >
            <EuiFlexGroup
              alignItems="center"
              component="div"
              gutterSize="xs"
              justifyContent="flexStart"
              responsive={true}
              wrap={false}
            >
              <EuiFlexItem
                className="advancedSettings__field__key__wrapper"
                component="div"
                grow={true}
              >
                <EuiTextColor
                  aria-label="markdown test setting"
                  className="advancedSettings__field__key__text"
                  color="subdued"
                >
                  markdown:test:setting
                </EuiTextColor>
              </EuiFlexItem>
              
            </EuiFlexGroup>
          </EuiFlexItem>
        </EuiFlexGroup>
      }
    >
      <EuiTextArea
        data-test-subj="advancedSetting-editField-markdown:test:setting"
        disabled={false}
        fullWidth={false}
        isInvalid={false}
        onChange={[Function]}
        onKeyDown={[Function]}
        rows={6}
        value=""
      />
    </EuiFormRow>
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`Field for markdown setting should render user value if there is user value is set 1`] = `
<EuiFlexGroup
  alignItems="stretch"
  component="div"
  gutterSize="l"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={false}
    style={
      Object {
        "minWidth": 400,
      }
    }
  >
    <EuiFormRow
      error={null}
      fullWidth={false}
      hasEmptyLabelSpace={false}
      helpText={
        <div>
          <div>
            <span
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Description for Markdown test setting",
                }
              }
            />
          </div>
          <span>
            Default: 
            <em>
              null
            </em>
              
            <EuiLink
              aria-label="Reset markdown test setting"
              color="primary"
              data-test-subj="advancedSetting-resetField-markdown:test:setting"
              onClick={[Function]}
              type="button"
            >
              Reset
            </EuiLink>
              
          </span>
        </div>
      }
      isInvalid={false}
      label={
        <EuiFlexGroup
          alignItems="stretch"
          component="div"
          gutterSize="s"
          justifyContent="spaceBetween"
          responsive={true}
          wrap={false}
        >
          <EuiFlexItem
            className="advancedSettings__field__name"
            component="div"
            grow={true}
          >
            Markdown test setting
          </EuiFlexItem>
          <EuiFlexItem
            className="advancedSettings__field__key"
            component="div"
            grow={false}
          >
            <EuiFlexGroup
              alignItems="center"
              component="div"
              gutterSize="xs"
              justifyContent="flexStart"
              responsive={true}
              wrap={false}
            >
              <EuiFlexItem
                className="advancedSettings__field__key__wrapper"
                component="div"
                grow={true}
              >
                <EuiTextColor
                  aria-label="markdown test setting"
                  className="advancedSettings__field__key__text"
                  color="subdued"
                >
                  markdown:test:setting
                </EuiTextColor>
              </EuiFlexItem>
              
            </EuiFlexGroup>
          </EuiFlexItem>
        </EuiFlexGroup>
      }
    >
      <EuiTextArea
        data-test-subj="advancedSetting-editField-markdown:test:setting"
        disabled={false}
        fullWidth={false}
        isInvalid={false}
        onChange={[Function]}
        onKeyDown={[Function]}
        rows={6}
        value="**bold**"
      />
    </EuiFormRow>
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`Field for number setting should render custom setting icon if it is custom 1`] = `
<EuiFlexGroup
  alignItems="stretch"
  component="div"
  gutterSize="l"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={false}
    style={
      Object {
        "minWidth": 400,
      }
    }
  >
    <EuiFormRow
      error={null}
      fullWidth={false}
      hasEmptyLabelSpace={false}
      helpText={
        <div>
          <div>
            <span
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Description for Number test setting",
                }
              }
            />
          </div>
        </div>
      }
      isInvalid={false}
      label={
        <EuiFlexGroup
          alignItems="stretch"
          component="div"
          gutterSize="s"
          justifyContent="spaceBetween"
          responsive={true}
          wrap={false}
        >
          <EuiFlexItem
            className="advancedSettings__field__name"
            component="div"
            grow={true}
          >
            Number test setting
          </EuiFlexItem>
          <EuiFlexItem
            className="advancedSettings__field__key"
            component="div"
            grow={false}
          >
            <EuiFlexGroup
              alignItems="center"
              component="div"
              gutterSize="xs"
              justifyContent="flexStart"
              responsive={true}
              wrap={false}
            >
              <EuiFlexItem
                className="advancedSettings__field__key__wrapper"
                component="div"
                grow={true}
              >
                <EuiTextColor
                  aria-label="number test setting"
                  className="advancedSettings__field__key__text"
                  color="subdued"
                >
                  number:test:setting
                </EuiTextColor>
              </EuiFlexItem>
              <EuiFlexItem
                component="div"
                grow={false}
              >
                <EuiIconTip
                  aria-label="Custom setting"
                  color="primary"
                  content="Custom setting"
                  type="asterisk"
                />
              </EuiFlexItem>
            </EuiFlexGroup>
          </EuiFlexItem>
        </EuiFlexGroup>
      }
    >
      <EuiFieldNumber
        data-test-subj="advancedSetting-editField-number:test:setting"
        disabled={false}
        fullWidth={false}
        isLoading={false}
        onChange={[Function]}
        onKeyDown={[Function]}
        value={5}
      />
    </EuiFormRow>
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`Field for number setting should render default value if there is no user value set 1`] = `
<EuiFlexGroup
  alignItems="stretch"
  component="div"
  gutterSize="l"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={false}
    style={
      Object {
        "minWidth": 400,
      }
    }
  >
    <EuiFormRow
      error={null}
      fullWidth={false}
      hasEmptyLabelSpace={false}
      helpText={
        <div>
          <div>
            <span
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Description for Number test setting",
                }
              }
            />
          </div>
        </div>
      }
      isInvalid={false}
      label={
        <EuiFlexGroup
          alignItems="stretch"
          component="div"
          gutterSize="s"
          justifyContent="spaceBetween"
          responsive={true}
          wrap={false}
        >
          <EuiFlexItem
            className="advancedSettings__field__name"
            component="div"
            grow={true}
          >
            Number test setting
          </EuiFlexItem>
          <EuiFlexItem
            className="advancedSettings__field__key"
            component="div"
            grow={false}
          >
            <EuiFlexGroup
              alignItems="center"
              component="div"
              gutterSize="xs"
              justifyContent="flexStart"
              responsive={true}
              wrap={false}
            >
              <EuiFlexItem
                className="advancedSettings__field__key__wrapper"
                component="div"
                grow={true}
              >
                <EuiTextColor
                  aria-label="number test setting"
                  className="advancedSettings__field__key__text"
                  color="subdued"
                >
                  number:test:setting
                </EuiTextColor>
              </EuiFlexItem>
              
            </EuiFlexGroup>
          </EuiFlexItem>
        </EuiFlexGroup>
      }
    >
      <EuiFieldNumber
        data-test-subj="advancedSetting-editField-number:test:setting"
        disabled={false}
        fullWidth={false}
        isLoading={false}
        onChange={[Function]}
        onKeyDown={[Function]}
        value={5}
      />
    </EuiFormRow>
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`Field for number setting should render user value if there is user value is set 1`] = `
<EuiFlexGroup
  alignItems="stretch"
  component="div"
  gutterSize="l"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={false}
    style={
      Object {
        "minWidth": 400,
      }
    }
  >
    <EuiFormRow
      error={null}
      fullWidth={false}
      hasEmptyLabelSpace={false}
      helpText={
        <div>
          <div>
            <span
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Description for Number test setting",
                }
              }
            />
          </div>
          <span>
            Default: 
            <em>
              5
            </em>
              
            <EuiLink
              aria-label="Reset number test setting"
              color="primary"
              data-test-subj="advancedSetting-resetField-number:test:setting"
              onClick={[Function]}
              type="button"
            >
              Reset
            </EuiLink>
              
          </span>
        </div>
      }
      isInvalid={false}
      label={
        <EuiFlexGroup
          alignItems="stretch"
          component="div"
          gutterSize="s"
          justifyContent="spaceBetween"
          responsive={true}
          wrap={false}
        >
          <EuiFlexItem
            className="advancedSettings__field__name"
            component="div"
            grow={true}
          >
            Number test setting
          </EuiFlexItem>
          <EuiFlexItem
            className="advancedSettings__field__key"
            component="div"
            grow={false}
          >
            <EuiFlexGroup
              alignItems="center"
              component="div"
              gutterSize="xs"
              justifyContent="flexStart"
              responsive={true}
              wrap={false}
            >
              <EuiFlexItem
                className="advancedSettings__field__key__wrapper"
                component="div"
                grow={true}
              >
                <EuiTextColor
                  aria-label="number test setting"
                  className="advancedSettings__field__key__text"
                  color="subdued"
                >
                  number:test:setting
                </EuiTextColor>
              </EuiFlexItem>
              
            </EuiFlexGroup>
          </EuiFlexItem>
        </EuiFlexGroup>
      }
    >
      <EuiFieldNumber
        data-test-subj="advancedSetting-editField-number:test:setting"
        disabled={false}
        fullWidth={false}
        isLoading={false}
        onChange={[Function]}
        onKeyDown={[Function]}
        value={10}
      />
    </EuiFormRow>
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`Field for select setting should render custom setting icon if it is custom 1`] = `
<EuiFlexGroup
  alignItems="stretch"
  component="div"
  gutterSize="l"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={false}
    style={
      Object {
        "minWidth": 400,
      }
    }
  >
    <EuiFormRow
      error={null}
      fullWidth={false}
      hasEmptyLabelSpace={false}
      helpText={
        <div>
          <div>
            <span
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Description for Select test setting",
                }
              }
            />
          </div>
        </div>
      }
      isInvalid={false}
      label={
        <EuiFlexGroup
          alignItems="stretch"
          component="div"
          gutterSize="s"
          justifyContent="spaceBetween"
          responsive={true}
          wrap={false}
        >
          <EuiFlexItem
            className="advancedSettings__field__name"
            component="div"
            grow={true}
          >
            Select test setting
          </EuiFlexItem>
          <EuiFlexItem
            className="advancedSettings__field__key"
            component="div"
            grow={false}
          >
            <EuiFlexGroup
              alignItems="center"
              component="div"
              gutterSize="xs"
              justifyContent="flexStart"
              responsive={true}
              wrap={false}
            >
              <EuiFlexItem
                className="advancedSettings__field__key__wrapper"
                component="div"
                grow={true}
              >
                <EuiTextColor
                  aria-label="select test setting"
                  className="advancedSettings__field__key__text"
                  color="subdued"
                >
                  select:test:setting
                </EuiTextColor>
              </EuiFlexItem>
              <EuiFlexItem
                component="div"
                grow={false}
              >
                <EuiIconTip
                  aria-label="Custom setting"
                  color="primary"
                  content="Custom setting"
                  type="asterisk"
                />
              </EuiFlexItem>
            </EuiFlexGroup>
          </EuiFlexItem>
        </EuiFlexGroup>
      }
    >
      <EuiSelect
        data-test-subj="advancedSetting-editField-select:test:setting"
        disabled={false}
        fullWidth={false}
        hasNoInitialSelection={false}
        isLoading={false}
        onChange={[Function]}
        onKeyDown={[Function]}
        options={
          Array [
            Object {
              "text": "apple",
              "value": "apple",
            },
            Object {
              "text": "orange",
              "value": "orange",
            },
            Object {
              "text": "banana",
              "value": "banana",
            },
          ]
        }
        value="orange"
      />
    </EuiFormRow>
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`Field for select setting should render default value if there is no user value set 1`] = `
<EuiFlexGroup
  alignItems="stretch"
  component="div"
  gutterSize="l"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={false}
    style={
      Object {
        "minWidth": 400,
      }
    }
  >
    <EuiFormRow
      error={null}
      fullWidth={false}
      hasEmptyLabelSpace={false}
      helpText={
        <div>
          <div>
            <span
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Description for Select test setting",
                }
              }
            />
          </div>
        </div>
      }
      isInvalid={false}
      label={
        <EuiFlexGroup
          alignItems="stretch"
          component="div"
          gutterSize="s"
          justifyContent="spaceBetween"
          responsive={true}
          wrap={false}
        >
          <EuiFlexItem
            className="advancedSettings__field__name"
            component="div"
            grow={true}
          >
            Select test setting
          </EuiFlexItem>
          <EuiFlexItem
            className="advancedSettings__field__key"
            component="div"
            grow={false}
          >
            <EuiFlexGroup
              alignItems="center"
              component="div"
              gutterSize="xs"
              justifyContent="flexStart"
              responsive={true}
              wrap={false}
            >
              <EuiFlexItem
                className="advancedSettings__field__key__wrapper"
                component="div"
                grow={true}
              >
                <EuiTextColor
                  aria-label="select test setting"
                  className="advancedSettings__field__key__text"
                  color="subdued"
                >
                  select:test:setting
                </EuiTextColor>
              </EuiFlexItem>
              
            </EuiFlexGroup>
          </EuiFlexItem>
        </EuiFlexGroup>
      }
    >
      <EuiSelect
        data-test-subj="advancedSetting-editField-select:test:setting"
        disabled={false}
        fullWidth={false}
        hasNoInitialSelection={false}
        isLoading={false}
        onChange={[Function]}
        onKeyDown={[Function]}
        options={
          Array [
            Object {
              "text": "apple",
              "value": "apple",
            },
            Object {
              "text": "orange",
              "value": "orange",
            },
            Object {
              "text": "banana",
              "value": "banana",
            },
          ]
        }
        value="orange"
      />
    </EuiFormRow>
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`Field for select setting should render user value if there is user value is set 1`] = `
<EuiFlexGroup
  alignItems="stretch"
  component="div"
  gutterSize="l"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={false}
    style={
      Object {
        "minWidth": 400,
      }
    }
  >
    <EuiFormRow
      error={null}
      fullWidth={false}
      hasEmptyLabelSpace={false}
      helpText={
        <div>
          <div>
            <span
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Description for Select test setting",
                }
              }
            />
          </div>
          <span>
            Default: 
            <em>
              orange
            </em>
              
            <EuiLink
              aria-label="Reset select test setting"
              color="primary"
              data-test-subj="advancedSetting-resetField-select:test:setting"
              onClick={[Function]}
              type="button"
            >
              Reset
            </EuiLink>
              
          </span>
        </div>
      }
      isInvalid={false}
      label={
        <EuiFlexGroup
          alignItems="stretch"
          component="div"
          gutterSize="s"
          justifyContent="spaceBetween"
          responsive={true}
          wrap={false}
        >
          <EuiFlexItem
            className="advancedSettings__field__name"
            component="div"
            grow={true}
          >
            Select test setting
          </EuiFlexItem>
          <EuiFlexItem
            className="advancedSettings__field__key"
            component="div"
            grow={false}
          >
            <EuiFlexGroup
              alignItems="center"
              component="div"
              gutterSize="xs"
              justifyContent="flexStart"
              responsive={true}
              wrap={false}
            >
              <EuiFlexItem
                className="advancedSettings__field__key__wrapper"
                component="div"
                grow={true}
              >
                <EuiTextColor
                  aria-label="select test setting"
                  className="advancedSettings__field__key__text"
                  color="subdued"
                >
                  select:test:setting
                </EuiTextColor>
              </EuiFlexItem>
              
            </EuiFlexGroup>
          </EuiFlexItem>
        </EuiFlexGroup>
      }
    >
      <EuiSelect
        data-test-subj="advancedSetting-editField-select:test:setting"
        disabled={false}
        fullWidth={false}
        hasNoInitialSelection={false}
        isLoading={false}
        onChange={[Function]}
        onKeyDown={[Function]}
        options={
          Array [
            Object {
              "text": "apple",
              "value": "apple",
            },
            Object {
              "text": "orange",
              "value": "orange",
            },
            Object {
              "text": "banana",
              "value": "banana",
            },
          ]
        }
        value="banana"
      />
    </EuiFormRow>
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`Field for string setting should render custom setting icon if it is custom 1`] = `
<EuiFlexGroup
  alignItems="stretch"
  component="div"
  gutterSize="l"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={false}
    style={
      Object {
        "minWidth": 400,
      }
    }
  >
    <EuiFormRow
      error={null}
      fullWidth={false}
      hasEmptyLabelSpace={false}
      helpText={
        <div>
          <div>
            <span
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Description for String test setting",
                }
              }
            />
          </div>
        </div>
      }
      isInvalid={false}
      label={
        <EuiFlexGroup
          alignItems="stretch"
          component="div"
          gutterSize="s"
          justifyContent="spaceBetween"
          responsive={true}
          wrap={false}
        >
          <EuiFlexItem
            className="advancedSettings__field__name"
            component="div"
            grow={true}
          >
            String test setting
          </EuiFlexItem>
          <EuiFlexItem
            className="advancedSettings__field__key"
            component="div"
            grow={false}
          >
            <EuiFlexGroup
              alignItems="center"
              component="div"
              gutterSize="xs"
              justifyContent="flexStart"
              responsive={true}
              wrap={false}
            >
              <EuiFlexItem
                className="advancedSettings__field__key__wrapper"
                component="div"
                grow={true}
              >
                <EuiTextColor
                  aria-label="string test setting"
                  className="advancedSettings__field__key__text"
                  color="subdued"
                >
                  string:test:setting
                </EuiTextColor>
              </EuiFlexItem>
              <EuiFlexItem
                component="div"
                grow={false}
              >
                <EuiIconTip
                  aria-label="Custom setting"
                  color="primary"
                  content="Custom setting"
                  type="asterisk"
                />
              </EuiFlexItem>
            </EuiFlexGroup>
          </EuiFlexItem>
        </EuiFlexGroup>
      }
    >
      <EuiFieldText
        data-test-subj="advancedSetting-editField-string:test:setting"
        disabled={false}
        fullWidth={false}
        isLoading={false}
        onChange={[Function]}
        onKeyDown={[Function]}
        value=""
      />
    </EuiFormRow>
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`Field for string setting should render default value if there is no user value set 1`] = `
<EuiFlexGroup
  alignItems="stretch"
  component="div"
  gutterSize="l"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={false}
    style={
      Object {
        "minWidth": 400,
      }
    }
  >
    <EuiFormRow
      error={null}
      fullWidth={false}
      hasEmptyLabelSpace={false}
      helpText={
        <div>
          <div>
            <span
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Description for String test setting",
                }
              }
            />
          </div>
        </div>
      }
      isInvalid={false}
      label={
        <EuiFlexGroup
          alignItems="stretch"
          component="div"
          gutterSize="s"
          justifyContent="spaceBetween"
          responsive={true}
          wrap={false}
        >
          <EuiFlexItem
            className="advancedSettings__field__name"
            component="div"
            grow={true}
          >
            String test setting
          </EuiFlexItem>
          <EuiFlexItem
            className="advancedSettings__field__key"
            component="div"
            grow={false}
          >
            <EuiFlexGroup
              alignItems="center"
              component="div"
              gutterSize="xs"
              justifyContent="flexStart"
              responsive={true}
              wrap={false}
            >
              <EuiFlexItem
                className="advancedSettings__field__key__wrapper"
                component="div"
                grow={true}
              >
                <EuiTextColor
                  aria-label="string test setting"
                  className="advancedSettings__field__key__text"
                  color="subdued"
                >
                  string:test:setting
                </EuiTextColor>
              </EuiFlexItem>
              
            </EuiFlexGroup>
          </EuiFlexItem>
        </EuiFlexGroup>
      }
    >
      <EuiFieldText
        data-test-subj="advancedSetting-editField-string:test:setting"
        disabled={false}
        fullWidth={false}
        isLoading={false}
        onChange={[Function]}
        onKeyDown={[Function]}
        value=""
      />
    </EuiFormRow>
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`Field for string setting should render user value if there is user value is set 1`] = `
<EuiFlexGroup
  alignItems="stretch"
  component="div"
  gutterSize="l"
  justifyContent="flexStart"
  responsive={true}
  wrap={false}
>
  <EuiFlexItem
    component="div"
    grow={false}
    style={
      Object {
        "minWidth": 400,
      }
    }
  >
    <EuiFormRow
      error={null}
      fullWidth={false}
      hasEmptyLabelSpace={false}
      helpText={
        <div>
          <div>
            <span
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Description for String test setting",
                }
              }
            />
          </div>
          <span>
            Default: 
            <em>
              null
            </em>
              
            <EuiLink
              aria-label="Reset string test setting"
              color="primary"
              data-test-subj="advancedSetting-resetField-string:test:setting"
              onClick={[Function]}
              type="button"
            >
              Reset
            </EuiLink>
              
          </span>
        </div>
      }
      isInvalid={false}
      label={
        <EuiFlexGroup
          alignItems="stretch"
          component="div"
          gutterSize="s"
          justifyContent="spaceBetween"
          responsive={true}
          wrap={false}
        >
          <EuiFlexItem
            className="advancedSettings__field__name"
            component="div"
            grow={true}
          >
            String test setting
          </EuiFlexItem>
          <EuiFlexItem
            className="advancedSettings__field__key"
            component="div"
            grow={false}
          >
            <EuiFlexGroup
              alignItems="center"
              component="div"
              gutterSize="xs"
              justifyContent="flexStart"
              responsive={true}
              wrap={false}
            >
              <EuiFlexItem
                className="advancedSettings__field__key__wrapper"
                component="div"
                grow={true}
              >
                <EuiTextColor
                  aria-label="string test setting"
                  className="advancedSettings__field__key__text"
                  color="subdued"
                >
                  string:test:setting
                </EuiTextColor>
              </EuiFlexItem>
              
            </EuiFlexGroup>
          </EuiFlexItem>
        </EuiFlexGroup>
      }
    >
      <EuiFieldText
        data-test-subj="advancedSetting-editField-string:test:setting"
        disabled={false}
        fullWidth={false}
        isLoading={false}
        onChange={[Function]}
        onKeyDown={[Function]}
        value="foo"
      />
    </EuiFormRow>
  </EuiFlexItem>
</EuiFlexGroup>
`;
